Closed Bug 1580991 Opened 5 years ago Closed 5 years ago

Trigger DOMLocalization::OnChange from Localization::Observe

Categories

(Core :: Internationalization, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla71
Tracking Status
firefox71 --- fixed

People

(Reporter: zbraniecki, Assigned: zbraniecki)

Details

Attachments

(1 file)

During the migration of DOMLocalization to C++ I accidentally regressed the dynamic reaction to language changes and pseudolocales.

Let's fix it.

Assignee: nobody → gandalf
Status: NEW → ASSIGNED
Pushed by zbraniecki@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/742924efe3be
Trigger DOMLocalization::OnChange from Localization::Observe. r=smaug
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla71
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: