Bug 1580991 - Trigger DOMLocalization::OnChange from Localization::Observe. r=smaug

Differential Revision: https://phabricator.services.mozilla.com/D45759